# mouse-controller

./: .github_setup.md  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  GITHUB_READY.md  LICENSE  Makefile  PROJECT_COMPLETE.md  QUICKSTART.md  README.md  github_setup_final.sh  pyproject.toml  requirements-ci.txt  requirements.txt  setup.py  setup_github.sh  test_installation.py
.claudecode/: architecture.md  instructions.md  project.json  tasks.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
examples/: basic_usage.py  run_gui.py
mouse_controller/: __init__.py  main.py
mouse_controller/core/: __init__.py  mouse_mover.py  patterns.py
mouse_controller/gui/: __init__.py  interface.py
mouse_controller/utils/: __init__.py  helpers.py
tests/: __init__.py  test_mouse_mover.py
