# Mouse Controller Configuration

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mouse-controller"
version = "1.0.0"
description = "Advanced mouse cursor movement controller"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["mouse", "cursor", "automation", "gui", "patterns"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Desktop Environment",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "pyautogui>=0.9.54",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov",
    "black",
    "flake8",
]

[project.scripts]
mouse-controller = "mouse_controller.main:main"
mouse-controller-gui = "mouse_controller.gui.interface:main"

[project.urls]
Homepage = "https://github.com/yourusername/mouse-controller"
Repository = "https://github.com/yourusername/mouse-controller.git"
Documentation = "https://github.com/yourusername/mouse-controller#readme"
"Bug Tracker" = "https://github.com/yourusername/mouse-controller/issues"

[tool.setuptools]
packages = ["mouse_controller", "mouse_controller.core", "mouse_controller.gui", "mouse_controller.utils"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
